<resources>
    <string name="app_name">NMedia</string>
    <string name="start_text">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_edit_cancel">Cancel</string>
    <string name="edit_post">Edit Post</string>
    <string name="add_post">Add post</string>
    <string name="description_edit_image">Edit Image</string>
    <string name="description_post_views">Views</string>
    <string name="content_desc_video_block">Content video block</string>
    <string name="content_desc_play_button">Content video play button</string>
    <string name="video_link">Ссылка на видео (RUTUBE)</string>
    <string name="hint_post_content">Post content</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s created new post:%n%2$s</string>
</resources>